akka-javasdk-annotation-processor-tests/component-validation-descriptors/src/test/resources/test-sources/valid/SimpleWorkflow.java
package com.example;

import akka.javasdk.workflow.Workflow;

public class SimpleWorkflow extends Workflow<String> {

}
